// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Tooltip
  overlay={
    <div>
      <FormattedRelative
        updateInterval={10000}
        value="date"
      />
      , 
      <DateFormatter
        long={true}
        value="date"
      />
    </div>
  }
  placement="left"
>
  <div
    className="domain-measures-leak-header"
  >
    overview.leak_period_x.overview.period.previous_version.6,4
  </div>
</Tooltip>
`;

exports[`should render correctly 2`] = `
<div
  className="domain-measures-leak-header"
>
  overview.leak_period_x.overview.period.days.18
</div>
`;

exports[`should render correctly for APP 1`] = `
<div
  className="domain-measures-leak-header"
>
  issues.leak_period
</div>
`;
